--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -8,9 +8,11 @@
         <h5 class="card-title">{{user.name}}</h5>
         <p class="card-text">{{user.email}}</p>
       </div>
+      {{#ifCond currentUser.id user.id}}
       <a href='/users/{{user.id}}/edit'>
         <button type="button" class="btn btn-primary">edit</button>
       </a>
+      {{/ifCond}}
     </div>
   </div>
 </div>
